# imu-fusion-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
examples/: advanced.rs  nalgebra.rs  simple.rs  simple_by_duration.rs
src/: fusion_ahrs_impl.rs  fusion_euler_impl.rs  fusion_gyr_offset_impl.rs  fusion_impl.rs  fusion_matrix_impl.rs  fusion_quaternion_impl.rs  fusion_vector_impl.rs  lib.rs  nalgebra.rs
tests/: fusion_c_out.csv  fusion_in.csv  fusion_rs_out.csv
tests/fusion-c/: CMakeLists.txt  Makefile  main.c
tests/fusion-rs/: test_1.rs
