[package]
name = "imu-fusion"
version = "0.2.1"
edition = "2021"
authors = ["Mark Berner <mark@berner.dev>"]
description = "A Rust library for fusing IMU data. Based on https://github.com/xioTechnologies/Fusion"
readme = "README.md"
repository = "https://github.com/mark2b/imu-fusion-rs"
license-file = "LICENSE"
keywords = ["imu", "fusion", "accelerometer", "gyroscope", "magnetometer"]
exclude = ["/tests", "/fusion-c"]

[features]
fusion-use-normal-sqrt = []

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[[example]]
name = "nalgebra"
path = "examples/nalgebra.rs"

[[test]]
name = "test-1"
path = "tests/fusion-rs/test_1.rs"


[lib]
path = "src/lib.rs"

[dependencies]
libm = "0.2.8"
nalgebra = { version = "0.32.3", default-features = false, features = ["libm-force"] }

[dev-dependencies]
csv = "1.3.0"
